[project]
name = "odoc-mcp"
version = "0.1.0"
description = "OCaml Documentation Dataset Analysis and Extraction"
authors = [
    {name = "Claude", email = "claude@anthropic.com"}
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "aiohttp>=3.9.0",
    "mcp>=1.0.0",
    "fastmcp>=2.10.2",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
]
requires-python = ">=3.10"

[project.scripts]
extract-docs = "extract_docs:main"
mcp-server = "mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["extract_docs.py", "parse_html.py", "version_utils.py"]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
