[project]
name = "odoc-mcp"
version = "0.1.0"
description = "OCaml Documentation Dataset Analysis and Extraction"
authors = [
    {name = "Claude", email = "claude@anthropic.com"}
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "aiohttp>=3.9.0",
    "mcp>=1.0.0",
]
requires-python = ">=3.10"

[project.scripts]
mcp-server = "mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server.py", "version_utils.py"]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
